# kamus-bahasa-moy-website

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  README.md  astro.config.mjs  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  content_request.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
apps/api/: .dockerignore  .env.example  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 8179ec81fdb5_make_meaning_name_nullable.py  f72b9bbcef2d_initial_schema.py
apps/api/app/: database.py  main.py
apps/api/app/models/: __init__.py  dictionary.py  song.py
apps/api/app/routers/: dictionary.py  songs.py
apps/api/app/schemas/: __init__.py  dictionary.py  song.py
apps/api/data/: dictionary.json  songs.json
apps/api/docker/: Dockerfile
apps/api/scripts/: seed.py
apps/api/tests/: conftest.py  test_main.py
apps/web/: .dockerignore  .prettierignore  astro.config.mjs  eslint.config.js  package.json
apps/web/docker/: Dockerfile  entrypoint.sh
apps/web/public/favicon/: site.webmanifest
src/components/: BaseHead.astro  Footer.astro  Header.astro  Home.tsx  KosaKata.tsx  LirikLagu.tsx
src/components/ui/: use-toast.ts
src/data/: dictionary.json  songs.json
src/layouts/: MainLayout.astro
src/pages/: index.astro  kebijakan-privasi.astro  kosa-kata.astro  lirik-lagu.astro  syarat-ketentuan.astro  tentang.astro
src/pages/tentang/: index.astro
src/styles/: global.css
(+19 files in other folders)
