[project]
name = "kamus-bahasa-moy-api"
version = "0.1.0"
description = "Backend API untuk Kamus Bahasa Moy"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]

[project.scripts]
dev = "uvicorn app.main:app --reload --port 8000"
