[project]
name = "kamus-bahasa-moy-api"
version = "0.1.0"
description = "Backend API untuk Kamus Bahasa Moy"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]

[project.scripts]
dev = "uvicorn app.main:app --reload --port 8000"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.ruff.lint]
select = ["E", "F", "I", "U"]
ignore = ["E402"]
